# Pulsar-Project

./: AllResults_N10.csv  AllResults_N100.csv  AllResults_N1000.csv  AllResults_N10000.csv  AllResults_N50.csv  AllResults_N500.csv  AllResults_N5000.csv  N10000minpulsar.ASCII  README.md  Results.csv  W5testmodel.p3fold.ASCII  a1a2_3_pulsar.ASCII  b1b2_pulsar.ASCII  data_analysis.py  intensity_results.txt  main.py  min.ASCII  min_chi_27040_2.ASCII  min_chi_noise.ASCII  multitest.py  pulsar-getter  pulsar-getter.sh  pulsar_producer.py  realreferencepulsar.ASCII  realreferencepulsarnoP.ASCII  refpulsar.gg  refpulsar.gg.ASCII  refpulsar.gg.ascii  results.txt  resultsCone2BeamletAngle.txt  resultsCone2phi0.txt  results_a1a2.txt  results_a1a2_2.txt  results_a1a2_2704.txt  results_a1a2_3.txt  results_a1a2_refinea1.txt  results_a1a2_refinea2.txt  results_analysis.py  results_b1.txt  results_b1b2.txt  (+14 more)
crispin2/: W5testmodel.p3fold.ASCII.D  W5testmodel.p3fold.ASCII.D.normalised  W5testmodel.p3fold.ASCII.D.normalised.ASCII  W5testmodel.p3fold.ASCII.D.normalised.hist  W5testmodel.p3fold.ASCII.hist  W5testmodel.p3fold.ASCII.normalised  W5testmodel.p3fold.ASCII.normalised.ASCII  W5testmodel.p3fold.ASCII.normalised.hist  W5testmodel.p3fold.hist  testmodel.gg  testmodel.gg.D.normalised  testmodel.gg.D.p3fold.ASCII  testmodel.noise.normalised  testmodel.noise.normalised.ASCII  weak.all37.p3fold.ASCII  weak.all37.p3fold.ASCII.hist  weak.all37.p3fold.ASCII.normalised  weak.all37.p3fold.ASCII.normalised.ASCII  weak.all37.p3fold.ASCII.normalised.hist
psrsalsa-1.0/: Makefile  Makefile.am  Makefile.in  aclocal.m4  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
psrsalsa-1.0/autoconf.boot/: pgplot.m4
psrsalsa-1.0/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
psrsalsa-1.0/src/: Makefile  Makefile.am  Makefile.in
psrsalsa-1.0/src/lib/: Makefile  Makefile.am  Makefile.in  amoeba.c  amoeba.lo  amoeba_d.c  amoeba_d.lo  amoeba_ld.c  amoeba_ld.lo  amoeba_nmsimplex.c  amoeba_nmsimplex.lo  amoeba_nmsimplex_d.lo  amoeba_nmsimplex_ld.c  amoeba_nmsimplex_ld.lo  angles.c  angles.lo  application.c  application.lo  astronomy.c  astronomy.lo  binarymodels.c  binarymodels.lo  binarymodels_simplyfied.c  binarymodels_simplyfied.lo  cal.c  cal.lo  calc.c  calc.lo  fft.c  fitting.c  fitting.lo  fitting_ld.c  fitting_ld.lo  fold.c  fold.lo  libsalsa.la  linalg.c  linalg_ld.c  linalg_ld.lo  minimize.c  (+53 more)
psrsalsa-1.0/src/lib/.deps/: amoeba.Plo  amoeba_d.Plo  amoeba_ld.Plo  amoeba_nmsimplex.Plo  amoeba_nmsimplex_d.Plo  amoeba_nmsimplex_ld.Plo  angles.Plo  application.Plo  astronomy.Plo  binarymodels.Plo  binarymodels_simplyfied.Plo  cal.Plo  calc.Plo  fft.Plo  fitting.Plo  fitting_ld.Plo  fold.Plo  linalg.Plo  linalg_ld.Plo  minimize.Plo  mpolyco.Plo  myio.Plo  pgplot.Plo  pgplotsubroutineshelp.Plo  ppgplot.Plo  ppolyco.Plo  psrio.Plo  psrio_desh.Plo  psrio_epn.Plo  psrio_fb.Plo  psrio_fits.Plo  psrio_gmrt.Plo  psrio_opperations.Plo  psrio_paswing.Plo  psrio_preprocess.Plo  psrio_presto.Plo  psrio_puma.Plo  psrio_sigproc.Plo  pulseenergy.Plo  rmsynth.Plo  (+4 more)
psrsalsa-1.0/src/lib/.libs/: libsalsa.la
psrsalsa-1.0/src/prog/: 42ft.c  42ft.c.svninfo  Makefile  Makefile.am  Makefile.in  avrg_bin_files.c  avrg_bin_files.c.svninfo  cleanFITS.c  cleanFITS.c.svninfo  fakeDist  fakeDist.c  fakeDist.c.svninfo  fakePulsar.c  fakePulsar.c.svninfo  fiddleFITS.c  fiddleFITS.c.svninfo  fit_asym  fit_asym.c  fit_asym.c.svninfo  fit_asym_gridsearch  fit_asym_gridsearch.c  fit_asym_gridsearch.c.svninfo  fit_asym_gridsearch.c~  fit_mrq  fit_mrq.c  fit_mrq.c.svninfo  fitvonMises.c  fitvonMises.c.svninfo  interpol.c  interpol.c.svninfo  livePSRaudioserver  livePSRaudioserver.c  livePSRaudioserver.c.svninfo  livePSRsender  livePSRsender.c  livePSRsender.c.svninfo  mksched  mksched.c  mksched.c.svninfo  padd.c  (+61 more)
psrsalsa-1.0/src/prog/.deps/: 42ft.Po  avrg_bin_files.Po  cleanFITS.Po  fakeDist.Po  fakePulsar.Po  fiddleFITS.Po  fit_asym.Po  fit_asym_gridsearch.Po  fit_mrq.Po  fitvonMises.Po  interpol.Po  livePSRaudioserver.Po  livePSRsender.Po  mksched.Po  padd.Po  pcal.Po  pcalc.Po  pcenter.Po  pconv.Po  pdist.Po  pdistFit.Po  penergy.Po  pfold.Po  pgplotInterpretor.Po  pheader.Po  pmod.Po  pplot.Po  ppol.Po  ppolFig.Po  ppolFit.Po  prebin.Po  pspec.Po  pspecDetect.Po  pspecFig.Po  psplit.Po  pstat.Po  rise_set.Po  rmsynth.Po  tempo3-tempo3.Po
psrsalsa-1.0/src/slalib/: Makefile  Makefile.am  Makefile.in  libslawrap.la  libslawrap_la-altaz.lo  libslawrap_la-cldj.lo  libslawrap_la-dat.lo  libslawrap_la-dcc2s.lo  libslawrap_la-dcs2c.lo  libslawrap_la-de2h.lo  libslawrap_la-deuler.lo  libslawrap_la-dimxv.lo  libslawrap_la-dmxm.lo  libslawrap_la-dmxv.lo  libslawrap_la-drange.lo  libslawrap_la-dranrm.lo  libslawrap_la-dsep.lo  libslawrap_la-dtt.lo  libslawrap_la-dvdv.lo  libslawrap_la-dvn.lo  libslawrap_la-ecleq.lo  libslawrap_la-ecmat.lo  libslawrap_la-epb.lo  libslawrap_la-epj.lo  libslawrap_la-eqecl.lo  libslawrap_la-eqgal.lo  libslawrap_la-etrms.lo  libslawrap_la-evp.lo  libslawrap_la-galeq.lo  libslawrap_la-geoc.lo  libslawrap_la-gmst.lo  libslawrap_la-map.lo  libslawrap_la-mappa.lo  libslawrap_la-mapqk.lo  libslawrap_la-nut.lo  libslawrap_la-nutc.lo  libslawrap_la-pa.lo  libslawrap_la-prebn.lo  libslawrap_la-prec.lo  libslawrap_la-precl.lo  (+5 more)
psrsalsa-1.0/src/slalib/.deps/: sla_wrap.Plo
psrsalsa-1.0/src/slalib/.libs/: libslawrap.la
