bin_PROGRAMS=avrg_bin_files fakeDist padd pconv pdist pdistFit penergy pfold pheader pmod pplot ppol ppolFig ppolFit pspec pspecDetect pspecFig pstat rmsynth tempo3 fiddleFITS cleanFITS fakePulsar fitvonMises pcalc psplit fit_mrq interpol livePSRaudioserver livePSRsender mksched pcal pcenter prebin pgplotInterpretor rise_set 42ft fit_asym fit_asym_gridsearch


LDADD=../lib/libsalsa.la

AM_CPPFLAGS=-I$(top_srcdir)/src/slalib -I$(top_srcdir)/src/lib @PGPLOT_CFLAGS@ @PTHREAD_CFLAGS@


tempo3_LDADD=$(LDADD) @GTK_LIBS@ @PTHREAD_LIBS@
tempo3_LDFLAGS=$(LDFLAGS) @PTHREAD_CFLAGS@
tempo3_CPPFLAGS=$(AM_CPPFLAGS) @GTK_CFLAGS@

EXTRA_DIST=avrg_bin_files.c.svninfo fakeDist.c.svninfo padd.c.svninfo pconv.c.svninfo pdist.c.svninfo pdistFit.c.svninfo penergy.c.svninfo pfold.c.svninfo pheader.c.svninfo pmod.c.svninfo pplot.c.svninfo ppol.c.svninfo ppolFig.c.svninfo ppolFit.c.svninfo pspec.c.svninfo pspecDetect.c.svninfo pspecFig.c.svninfo pstat.c.svninfo rmsynth.c.svninfo tempo3.c.svninfo fiddleFITS.c.svninfo cleanFITS.c.svninfo fakePulsar.c.svninfo fitvonMises.c.svninfo pcalc.c.svninfo psplit.c.svninfo fit_mrq.c.svninfo interpol.c.svninfo livePSRaudioserver.c.svninfo livePSRsender.c.svninfo mksched.c.svninfo pcal.c.svninfo pcenter.c.svninfo prebin.c.svninfo pgplotInterpretor.c.svninfo rise_set.c.svninfo 42ft.c.svninfo fit_asym.c.svninfo fit_asym_gridsearch.c.svninfo




