noinst_LTLIBRARIES=libslawrap.la

libslawrap_la_FFLAGS=-fno-underscoring


libslawrap_la_SOURCES= altaz.f cldj.f dat.f dcc2s.f dcs2c.f de2h.f deuler.f dimxv.f dmxm.f dmxv.f drange.f dranrm.f dsep.f dtt.f dvdv.f dvn.f ecleq.f ecmat.f epb.f epj.f eqecl.f eqgal.f etrms.f evp.f galeq.f geoc.f gmst.f map.f mappa.f mapqk.f nut.f nutc.f pa.f prebn.f prec.f precl.f prenut.f sla_wrap.c subet.f sla_wrap.h
